--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,11 +15,7 @@
         <activity
             android:name=".BookActivity"
             android:label="@string/title_activity_book" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".LessonActivity"
@@ -30,9 +27,9 @@
         </activity>
         <activity
             android:name=".PracticeActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_practice"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation|screenSize" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".TransitionActivity"
@@ -45,6 +42,15 @@
         <activity
             android:name=".BookCompletedActivity"
             android:label="@string/title_activity_lesson_completed" >
+        </activity>
+        <activity
+            android:name=".SelectUserActivity"
+            android:label="@string/title_activity_select_user" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
